fix error prone issues